src/snapshots/kk__tests__block_1.snap
---
source: src/main.rs
expression: "transpile_source(\"let x = { let x = a let y = b 'hello world' }\".to_string())"
---
Ok(
    "const x = (() => {const x = a;const y = b;return \'hello world\'})()",
)
