src/snapshots/kk__tests__function_5.snap
---
source: src/main.rs
expression: "transpile_source(\"let square = \\\\x:number => x\".to_string())"
---
Ok(
    "const square = (_0)=>{{var x = _0;return x}}",
)
