src/snapshots/kk__tests__function_call_4.snap
---
source: src/main.rs
expression: "transpile_source(\"let x = 'hello world'.replace('hello', with: 'bye')\".to_string())"
---
Ok(
    "const x = (replace)(\'hello world\',\'hello\',\'bye\')",
)
