src/snapshots/kk__tests__let_monadic_binding_number.snap
---
source: src/main.rs
expression: "type_check_source(\"\n            let guess = \\\\x => \n                let 0 = x\n                'bomb'\n            \".trim().to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 2,
                    line_end: 2,
                    column_start: 17,
                    column_end: 22,
                },
            },
            expected_type: Number,
            actual_type: String,
        },
    ),
)
